[package]
name = "tokio-uds"
# When releasing to crates.io:
# - Update html_root_url.
# - Update doc url
# - Update CHANGELOG.md.
# - Create "v0.2.x" git tag.
version = "0.2.2"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
repository = "https://github.com/tokio-rs/tokio"
homepage = "https://github.com/tokio-rs/tokio"
documentation = "https://docs.rs/tokio-uds/0.2.2/tokio_uds/"
description = """
Unix Domain sockets for Tokio
"""
categories = ["asynchronous"]

[dependencies]
bytes = "0.4.8"
futures = "0.1.21"
iovec = "0.1.2"
log = "0.4.2"
mio = "0.6.14"
tokio-reactor = { version = "0.1.1", path = "../tokio-reactor" }
tokio-io = { version = "0.1.6", path = "../tokio-io" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.42"
mio-uds = "0.6.5"

[target.'cfg(windows)'.dependencies]
mio-uds-windows = { git = "https://github.com/damonbarry/mio-uds-windows.git" }

[dev-dependencies]
tokio = { version = "0.1.6", path = "../" }
tempfile = "3"
